--- a/Calculator/MainPage.xaml
+++ b/Calculator/MainPage.xaml
@@ -3,11 +3,28 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Calculator"
+    xmlns:c="using:Calculator.Components"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
-
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-
+    mc:Ignorable="d" d:DesignHeight="800" d:DesignWidth="800">
+    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" Margin="0,0,0,0">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto"></ColumnDefinition>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+        <c:Fraction Grid.Row="0" Grid.Column="0">
+            <c:Fraction.Denominator>
+                <TextBlock Text="Foo" FontSize="48" />
+            </c:Fraction.Denominator>
+            <c:Fraction.Numerator>
+                <TextBlock Text="Bar" FontSize="36" />
+            </c:Fraction.Numerator>
+        </c:Fraction>
+        <Border Grid.Row="1" Background="BlueViolet"></Border>
+        <Border Grid.Row="0" Grid.Column="1" Background="BlueViolet"></Border>
     </Grid>
 </Page>
