--- a/Calculator/MainPage.xaml
+++ b/Calculator/MainPage.xaml
@@ -16,15 +16,21 @@
             <ColumnDefinition Width="Auto"></ColumnDefinition>
             <ColumnDefinition Width="*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
-        <c:Fraction Grid.Row="0" Grid.Column="0">
-            <c:Fraction.Denominator>
-                <TextBlock Text="Foo" FontSize="48" />
-            </c:Fraction.Denominator>
-            <c:Fraction.Numerator>
-                <TextBlock Text="FooBar" FontSize="36" />
-            </c:Fraction.Numerator>
-        </c:Fraction>
-        <Border Grid.Row="1" Background="BlueViolet"></Border>
-        <Border Grid.Row="0" Grid.Column="1" Background="BlueViolet"></Border>
+        <c:AlignPanel Grid.Row="0" Grid.Column="0">
+            <c:Fraction>
+                <TextBlock Text="Foobar"  />
+            </c:Fraction>
+            <c:Fraction>
+                <c:Fraction.Numerator>
+                    <TextBlock Text="Numerator" FontSize="36" FontFamily="Segoe UI" />
+                </c:Fraction.Numerator>
+                <c:Fraction.Denominator>
+                    <TextBlock Text="Denominator" FontFamily="Segoe UI" />
+                </c:Fraction.Denominator>
+            </c:Fraction>
+        </c:AlignPanel>
+        <Border Grid.Row="0" Grid.Column="1"></Border>
+        <Border Grid.Row="1" Grid.Column="0"></Border>
+        <Border Grid.Row="1" Grid.Column="1"></Border>
     </Grid>
 </Page>
