--- a/Calculator.Controls/Fraction.xaml
+++ b/Calculator.Controls/Fraction.xaml
@@ -1,8 +1,8 @@
 ﻿<UserControl
-    x:Class="Calculator.Components.Fraction"
+    x:Class="Calculator.Controls.Fraction"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Calculator.Components"
+    xmlns:local="using:Calculator.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
