--- a/Calculator.Controls/Fraction.xaml
+++ b/Calculator.Controls/Fraction.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl
+﻿<Control
     x:Class="Calculator.Controls.Fraction"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -8,15 +8,15 @@
     xmlns:controls="clr-namespace:Calculator.Controls"
     mc:Ignorable="d"
     d:DesignHeight="300" d:DesignWidth="400" x:Name="This" Template="{DynamicResource FractionTemplate}">
-    <UserControl.Resources>
+    <Control.Resources>
         <ControlTemplate x:Key="FractionTemplate" TargetType="controls:Fraction">
             <AdornerDecorator>
-                <StackPanel DataContext="{Binding ElementName=This}">
-                    <ContentPresenter Content="{Binding Numerator}" HorizontalAlignment="Center" />
-                    <Border Height="2" Margin="2" Background="Black" />
-                    <ContentPresenter Content="{Binding Denominator}" HorizontalAlignment="Center" />
-                </StackPanel>
+                <Canvas DataContext="{Binding ElementName=This}">
+                    <ContentPresenter Content="{Binding Numerator}" Canvas.Left="{Binding NumeratorLeft}" Canvas.Top="0" />
+                    <Border Background="Black" Canvas.Top="{Binding LineTop}" Canvas.Left="0" Height="{Binding LineHeight}" Width="{Binding LineWidth}" />
+                    <ContentPresenter Content="{Binding Denominator}" HorizontalAlignment="Center" Canvas.Left="{Binding DenominatorLeft}" Canvas.Top="{Binding DenominatorTop}" />
+                </Canvas>
             </AdornerDecorator>
         </ControlTemplate>
-    </UserControl.Resources>
-</UserControl>
+    </Control.Resources>
+</Control>
