--- a/Calculator/App.xaml
+++ b/Calculator/App.xaml
@@ -4,6 +4,49 @@
              xmlns:local="clr-namespace:Calculator"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary>
+                    <FontFamily x:Key="NotoSans">pack://application:,,,/Fonts/#NotoSans</FontFamily>
+                    <FontFamily x:Key="NotoSansSymbols">pack://application:,,,/Fonts/#NotoSansSymbols</FontFamily>
+                </ResourceDictionary>
+                <ResourceDictionary>
+                    <local:ColorToBrushValueConverter x:Key="ColorToBrush" />
+                </ResourceDictionary>
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Light.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Defaults.xaml" />
+                <ResourceDictionary>
+                    <!-- https://github.com/ButchersBoy/MaterialDesignInXamlToolkit/tree/master/MaterialDesignColors.Wpf/Themes -->
+                    <Color x:Key="Primary50">#eceff1</Color>
+                    <Color x:Key="Primary50Foreground">#DD000000</Color>
+                    <Color x:Key="Primary100">#cfd8dc</Color>
+                    <Color x:Key="Primary100Foreground">#DD000000</Color>
+                    <Color x:Key="Primary200">#b0bec5</Color>
+                    <Color x:Key="Primary200Foreground">#DD000000</Color>
+                    <Color x:Key="Primary300">#90a4ae</Color>
+                    <Color x:Key="Primary300Foreground">#DD000000</Color>
+                    <Color x:Key="Primary400">#78909c</Color>
+                    <Color x:Key="Primary400Foreground">#FFFFFFFF</Color>
+                    <Color x:Key="Primary500">#607d8b</Color>
+                    <Color x:Key="Primary500Foreground">#DDFFFFFF</Color>
+                    <Color x:Key="Primary600">#546e7a</Color>
+                    <Color x:Key="Primary600Foreground">#DDFFFFFF</Color>
+                    <Color x:Key="Primary700">#455a64</Color>
+                    <Color x:Key="Primary700Foreground">#DDFFFFFF</Color>
+                    <Color x:Key="Primary800">#37474f</Color>
+                    <Color x:Key="Primary800Foreground">#DDFFFFFF</Color>
+                    <Color x:Key="Primary900">#263238</Color>
+                    <Color x:Key="Primary900Foreground">#DDFFFFFF</Color>
+                    <Color x:Key="Accent100">#84ffff</Color>
+                    <Color x:Key="Accent100Foreground">#DD000000</Color>
+                    <Color x:Key="Accent200">#18ffff</Color>
+                    <Color x:Key="Accent200Foreground">#DD000000</Color>
+                    <Color x:Key="Accent400">#00e5ff</Color>
+                    <Color x:Key="Accent400Foreground">#DD000000</Color>
+                    <Color x:Key="Accent700">#00b8d4</Color>
+                    <Color x:Key="Accent700Foreground">#DD000000</Color>
+                </ResourceDictionary>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
