--- a/Calculator.Controls/Fraction.xaml
+++ b/Calculator.Controls/Fraction.xaml
@@ -13,7 +13,7 @@
             <AdornerDecorator>
                 <Canvas DataContext="{Binding ElementName=This}">
                     <ContentPresenter Content="{Binding Numerator}" Canvas.Left="{Binding NumeratorLeft}" Canvas.Top="0" />
-                    <Border Background="Black" Canvas.Top="{Binding LineTop}" Canvas.Left="0" Height="{Binding LineHeight}" Width="{Binding LineWidth}" />
+                    <Border Background="{Binding Foreground}" Canvas.Top="{Binding LineTop}" Canvas.Left="0" Height="{Binding LineHeight}" Width="{Binding LineWidth}" />
                     <ContentPresenter Content="{Binding Denominator}" HorizontalAlignment="Center" Canvas.Left="{Binding DenominatorLeft}" Canvas.Top="{Binding DenominatorTop}" />
                 </Canvas>
             </AdornerDecorator>
