--- a/Calculator/App.xaml
+++ b/Calculator/App.xaml
@@ -2,6 +2,8 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Calculator"
+             xmlns:styling="clr-namespace:Calculator.Styling;assembly=Calculator.Styling"
+             xmlns:shell="http://schemas.microsoft.com/winfx/2006/xaml/presentation/shell"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
@@ -11,10 +13,13 @@
                     <FontFamily x:Key="NotoSansSymbols">pack://application:,,,/Fonts/#NotoSansSymbols</FontFamily>
                 </ResourceDictionary>
                 <ResourceDictionary>
-                    <local:ColorToBrushValueConverter x:Key="ColorToBrush" />
+                    <styling:ColorToBrushValueConverter x:Key="ColorToBrush" />
                 </ResourceDictionary>
-                <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Light.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Dark.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Defaults.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/Recommended/Primary/MaterialDesignColor.Bluegrey.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/Recommended/Accent/MaterialDesignColor.Cyan.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Button.xaml" />
                 <ResourceDictionary>
                     <!-- https://github.com/ButchersBoy/MaterialDesignInXamlToolkit/tree/master/MaterialDesignColors.Wpf/Themes -->
                     <Color x:Key="Primary50">#eceff1</Color>
@@ -45,6 +50,167 @@
                     <Color x:Key="Accent400Foreground">#DD000000</Color>
                     <Color x:Key="Accent700">#00b8d4</Color>
                     <Color x:Key="Accent700Foreground">#DD000000</Color>
+                </ResourceDictionary>
+                <ResourceDictionary>
+                    <Style x:Key="StandardStyle" TargetType="{x:Type Window}">
+                        <Setter Property="shell:WindowChrome.WindowChrome">
+                            <Setter.Value>
+                                <shell:WindowChrome GlassFrameThickness="0" CornerRadius="0" ResizeBorderThickness="2" />
+                            </Setter.Value>
+                        </Setter>
+                        <Setter Property="Template">
+                            <Setter.Value>
+                                <ControlTemplate TargetType="{x:Type local:MainWindow}">
+                                    <Grid>
+                                        <Grid.RowDefinitions>
+                                            <RowDefinition Height="30" />
+                                            <RowDefinition />
+                                        </Grid.RowDefinitions>
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="*" />
+                                        </Grid.ColumnDefinitions>
+                                        
+                                        <Border Grid.Column="0" Grid.Row="1" Background="{StaticResource MaterialDesignPaper}" Margin="{Binding Source={x:Static shell:SystemParameters2.Current}, Path=WindowNonClientFrameThickness}">
+                                            <AdornerDecorator>
+                                                <ContentPresenter Content="{TemplateBinding Content}" />
+                                            </AdornerDecorator>
+                                        </Border>
+
+                                        <DockPanel Grid.Column="0" Grid.Row="0" LastChildFill="True" Background="{StaticResource MaterialDesignPaper}">
+                                            <TextBlock x:Name="PART_WindowCaptionText" DockPanel.Dock="Left" Text="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=Title}" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="36,0,0,0" Foreground="White"/>
+                                            <Image x:Name="PART_WindowCaptionIcon" DockPanel.Dock="Left" Source="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=Icon}" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(shell:WindowChrome.WindowChrome).ResizeBorderThickness}" Width="{Binding Source={x:Static shell:SystemParameters2.Current}, Path=SmallIconSize.Width}" WindowChrome.IsHitTestVisibleInChrome="True"/>
+                                            <Button DockPanel.Dock="Right" x:Name="Close" Command="{x:Static SystemCommands.CloseWindowCommand}" WindowChrome.IsHitTestVisibleInChrome="True">
+                                                <Grid Width="16" Height="25">
+                                                    <Path Data="M0,0 L8,8 M0,8 L8,0 Z" Width="9" Height="8" VerticalAlignment="Center" HorizontalAlignment="Center" Stroke="{Binding Foreground, RelativeSource={RelativeSource AncestorType={x:Type Button}, Mode=FindAncestor}}" StrokeThickness="2"  />
+                                                </Grid>
+                                            </Button>
+                                            <Button DockPanel.Dock="Right" x:Name="Restore" Command="{x:Static SystemCommands.RestoreWindowCommand}"  Visibility="Collapsed"  WindowChrome.IsHitTestVisibleInChrome="True">
+                                                <Grid Width="16" Height="25" UseLayoutRounding="True" RenderTransform="1,0,0,1,.5,.5">
+                                                    <Path Data="M2,0 L8,0 L8,6 M0,3 L6,3 M0,2 L6,2 L6,8 L0,8 Z" Width="8" Height="8" VerticalAlignment="Center" HorizontalAlignment="Center" Stroke="{Binding Foreground, RelativeSource={RelativeSource AncestorType={x:Type Button}, Mode=FindAncestor}}" StrokeThickness="1"  />
+                                                </Grid>
+                                            </Button>
+                                            <Button DockPanel.Dock="Right" x:Name="Maximize" Command="{x:Static SystemCommands.MaximizeWindowCommand}" WindowChrome.IsHitTestVisibleInChrome="True">
+                                                <Grid Width="16" Height="25">
+                                                    <Path Data="M0,1 L9,1 L9,8 L0,8 Z" Width="9" Height="8" VerticalAlignment="Center" HorizontalAlignment="Center" Stroke="{Binding Foreground, RelativeSource={RelativeSource AncestorType={x:Type Button}, Mode=FindAncestor}}" StrokeThickness="2"  />
+                                                </Grid>
+                                            </Button>
+                                            <Button DockPanel.Dock="Right" x:Name="Minimize" Command="{x:Static SystemCommands.MinimizeWindowCommand}">
+                                                <Grid Width="16" Height="25" UseLayoutRounding="True" RenderTransform="1,0,0,1,.5,.5">
+                                                    <Path Data="M0,8 L5,8 L5,7 L0,7" Width="8" Height="8" VerticalAlignment="Center" HorizontalAlignment="Center" Stroke="{Binding Foreground, RelativeSource={RelativeSource AncestorType={x:Type Button}, Mode=FindAncestor}}" StrokeThickness="1"  />
+                                                </Grid>
+                                            </Button>
+                                            <Border />
+                                        </DockPanel>
+                                    </Grid>
+                                    
+                                    <ControlTemplate.Triggers>
+                                        <Trigger SourceName="PART_WindowCaptionIcon" Property="Source" Value="{x:Null}">
+                                            <Setter TargetName="PART_WindowCaptionIcon" Property="Visibility" Value="Collapsed" />
+                                            <Setter TargetName="PART_WindowCaptionText" Property="Margin" Value="4,4,0,0" />
+                                        </Trigger>
+                                        
+                                        <Trigger Property="WindowState" Value="Maximized">
+                                            <Setter TargetName="Maximize" Property="Visibility" Value="Collapsed" />
+                                            <Setter TargetName="Restore" Property="Visibility" Value="Visible" />
+                                        </Trigger>
+                                        <Trigger Property="WindowState" Value="Normal">
+                                            <Setter TargetName="Maximize" Property="Visibility" Value="Visible" />
+                                            <Setter TargetName="Restore" Property="Visibility" Value="Collapsed" />
+                                        </Trigger>
+                                       
+                                    </ControlTemplate.Triggers>
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+                    </Style>
+                </ResourceDictionary>
+                
+                <ResourceDictionary>
+                    <Style x:Key="StyledWindow" TargetType="{x:Type local:ThemedWindow}">
+                        <Style.Resources>
+                            <SolidColorBrush x:Key="BorderBrush" Color="{StaticResource Primary100}" />
+                        </Style.Resources>
+                        
+                        <Setter Property="AllowsTransparency" Value="False" />
+                        <Setter Property="WindowStyle" Value="None" />
+                        
+                        <Setter Property="Template">
+                            <Setter.Value>
+                                <ControlTemplate x:Name="PART_WindowTemplate" TargetType="{x:Type local:ThemedWindow}">
+                                    <Grid x:Name="PART_WindowFrame">
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="1" />
+                                            <ColumnDefinition Width="*" />
+                                            <ColumnDefinition Width="1" />
+                                        </Grid.ColumnDefinitions>
+                                        <Grid.RowDefinitions>
+                                            <RowDefinition Height="1" />
+                                            <RowDefinition Height="Auto" />
+                                            <RowDefinition Height="*" />
+                                            <RowDefinition Height="1" />
+                                        </Grid.RowDefinitions>
+                                        <Border x:Name="PART_WindowBorderLeft"        Grid.Column="0" Grid.Row="0" Background="{DynamicResource BorderBrush}" Grid.RowSpan="2" />
+                                        <Border x:Name="PART_WindowBorderTopLeft"     Grid.Column="1" Grid.Row="0" Background="{DynamicResource BorderBrush}" />
+                                        <Border x:Name="PART_WindowBorderTop"         Grid.Column="2" Grid.Row="0" Background="{DynamicResource BorderBrush}" />
+                                        <Border x:Name="PART_WindowBorderTopRight"    Grid.Column="2" Grid.Row="1" Background="{DynamicResource BorderBrush}" />
+                                        <Border x:Name="PART_WindowBorderRight"       Grid.Column="2" Grid.Row="1" Background="{DynamicResource BorderBrush}" Grid.RowSpan="2" />
+                                        <Border x:Name="PART_WindowBorderBottomRight" Grid.Column="2" Grid.Row="3" Background="{DynamicResource BorderBrush}" />
+                                        <Border x:Name="PART_WindowBorderBottom"      Grid.Column="1" Grid.Row="3" Background="{DynamicResource BorderBrush}" />
+                                        <Border x:Name="PART_WindowBorderBottomLeft"  Grid.Column="0" Grid.Row="3" Background="{DynamicResource BorderBrush}" />
+                                        <Border x:Name="PART_WindowCaption" Grid.Column="1" Grid.Row="1" Background="{DynamicResource MaterialDesignPaper}">
+                                            <DockPanel LastChildFill="True">
+                                                <StackPanel DockPanel.Dock="Right" Orientation="Horizontal" VerticalAlignment="Center">
+                                                    <Button DockPanel.Dock="Right" x:Name="Minimize" Command="{x:Static SystemCommands.MinimizeWindowCommand}">
+                                                        <Grid Width="25" Height="25" UseLayoutRounding="True" RenderTransform="1,0,0,1,.5,.5">
+                                                            <Path Data="M0,8 L5,8 L5,7 L0,7" Width="8" Height="8" VerticalAlignment="Center" HorizontalAlignment="Center" Stroke="{Binding Foreground, RelativeSource={RelativeSource AncestorType={x:Type Button}, Mode=FindAncestor}}" StrokeThickness="1"  />
+                                                        </Grid>
+                                                    </Button>
+                                                    <Button DockPanel.Dock="Right" x:Name="Restore" Command="{x:Static SystemCommands.RestoreWindowCommand}"  Visibility="Collapsed">
+                                                        <Grid Width="25" Height="25" UseLayoutRounding="True" RenderTransform="1,0,0,1,.5,.5">
+                                                            <Path Data="M2,0 L8,0 L8,6 M0,3 L6,3 M0,2 L6,2 L6,8 L0,8 Z" Width="8" Height="8" VerticalAlignment="Center" HorizontalAlignment="Center" Stroke="{Binding Foreground, RelativeSource={RelativeSource AncestorType={x:Type Button}, Mode=FindAncestor}}" StrokeThickness="1"  />
+                                                        </Grid>
+                                                    </Button>
+                                                    <Button DockPanel.Dock="Right" x:Name="Maximize" Command="{x:Static SystemCommands.MaximizeWindowCommand}">
+                                                        <Grid Width="25" Height="25">
+                                                            <Path Data="M0,1 L9,1 L9,8 L0,8 Z" Width="9" Height="8" VerticalAlignment="Center" HorizontalAlignment="Center" Stroke="{Binding Foreground, RelativeSource={RelativeSource AncestorType={x:Type Button}, Mode=FindAncestor}}" StrokeThickness="2"  />
+                                                        </Grid>
+                                                    </Button>
+                                                    <Button DockPanel.Dock="Right" x:Name="Close" Command="{x:Static SystemCommands.CloseWindowCommand}">
+                                                        <Grid Width="25" Height="25">
+                                                            <Path Data="M0,0 L8,8 M0,8 L8,0 Z" Width="9" Height="8" VerticalAlignment="Center" HorizontalAlignment="Center" Stroke="{Binding Foreground, RelativeSource={RelativeSource AncestorType={x:Type Button}, Mode=FindAncestor}}" StrokeThickness="2"  />
+                                                        </Grid>
+                                                    </Button>
+                                                </StackPanel>
+                                                <TextBlock x:Name="PART_WindowCaptionText" DockPanel.Dock="Left" Margin="6,4,0,0" Padding="0" FontFamily="{DynamicResource NotoSans}" FontSize="16">
+                            <Image x:Name="PART_WindowCaptionIcon" Width="16" Height="16" Source="{TemplateBinding Icon}" SnapsToDevicePixels="True" RenderOptions.EdgeMode="Aliased" />
+                            <Run BaselineAlignment="Center" Text="{TemplateBinding Title}" Foreground="{Binding Source={StaticResource Accent100}, Converter={StaticResource ColorToBrush}}"></Run>
+                                                </TextBlock>
+                                            </DockPanel>
+                                        </Border>
+                                        <Border Grid.Row="2" Grid.Column="2">
+                                            <AdornerDecorator>
+                                                <ContentPresenter />
+                                            </AdornerDecorator>
+                                        </Border>
+                                    </Grid>
+                                    <ControlTemplate.Triggers>
+                                        <Trigger SourceName="PART_WindowCaptionIcon" Property="Source" Value="{x:Null}">
+                                            <Setter TargetName="PART_WindowCaptionIcon" Property="Visibility" Value="Collapsed" />
+                                            <Setter TargetName="PART_WindowCaptionText" Property="Margin" Value="0,4,0,0" />
+                                        </Trigger>
+                                        <Trigger Property="WindowState" Value="Maximized">
+                                            <Setter TargetName="Maximize" Property="Visibility" Value="Collapsed" />
+                                            <Setter TargetName="Restore" Property="Visibility" Value="Visible" />
+                                        </Trigger>
+                                        <Trigger Property="WindowState" Value="Normal">
+                                            <Setter TargetName="Maximize" Property="Visibility" Value="Visible" />
+                                            <Setter TargetName="Restore" Property="Visibility" Value="Collapsed" />
+                                        </Trigger>
+                                    </ControlTemplate.Triggers>
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+                    </Style>
                 </ResourceDictionary>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
