--- a/Calculator/MainWindow.xaml
+++ b/Calculator/MainWindow.xaml
@@ -5,11 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Calculator"
         xmlns:c="clr-namespace:Calculator.Controls;assembly=Calculator.Controls"
+        xmlns:keypad="clr-namespace:Calculator.Keypad;assembly=Calculator.Keypad"
+        xmlns:styling="clr-namespace:Calculator.Styling;assembly=Calculator.Styling"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="800" 
-        TextElement.Foreground="{DynamicResource MaterialDesignBody}" 
-        Background="{DynamicResource MaterialDesignPaper}" 
-        FontFamily="{StaticResource NotoSans}">
+        Title="MainWindow" Height="600" Width="800" MinHeight="600" MinWidth="800" Style="{StaticResource StandardStyle}" >
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -22,55 +21,52 @@
         </Grid.ColumnDefinitions>
 
         <Border Grid.Row="0" Grid.Column="2" Background="{Binding Source={StaticResource Primary300}, Converter={StaticResource ColorToBrush}}" HorizontalAlignment="Left" VerticalAlignment="Top" Padding="4">
-            <c:Root FontSize="36">
-                <TextBlock Text="b²-4ac" Background="Transparent" FontSize="36" FontFamily="{StaticResource NotoSans}" FontStyle="Oblique"/>
+            <c:Root FontSize="36" Foreground="White">
+                <TextBlock Text="b²-4ac" FontSize="36" FontFamily="{StaticResource NotoSans}" FontStyle="Oblique"/>
             </c:Root>
         </Border>
 
-        <Border Grid.Row="0" Grid.Column="0" Background="Beige"  Padding="4" HorizontalAlignment="Left" VerticalAlignment="Top">
+        <Border Grid.Row="0" Grid.Column="0" Padding="4" HorizontalAlignment="Left" VerticalAlignment="Top">
             <c:AlignPanel>
-                <TextBlock Text="x=" Background="Transparent" FontSize="36" FontFamily="{StaticResource NotoSans}"/>
-            <c:Fraction LineWidth="5" x:Name="Fraction" FontSize="36" LineHeight="3.6">
-                <c:Fraction.Numerator>
-                    <c:AlignPanel>
-                            <TextBlock Text="-b+" Background="Transparent" FontSize="36" FontFamily="{StaticResource NotoSans}"/>
+                <TextBlock Text="x=" FontSize="36" FontFamily="{StaticResource NotoSans}"/>
+                <c:Fraction LineWidth="5" x:Name="Fraction" FontSize="36" LineHeight="3.6">
+                    <c:Fraction.Numerator>
+                        <c:AlignPanel>
+                            <TextBlock Text="-b+" FontSize="36" FontFamily="{StaticResource NotoSans}"/>
                             <c:Root FontSize="36">
                                 <c:Root.Index>
                                     <TextBlock Text="2" FontSize="36" FontFamily="{StaticResource NotoSans}"/>
                                 </c:Root.Index>
-                                <TextBlock Text="b²-4ac" Background="Transparent" FontSize="36" FontFamily="{StaticResource NotoSans}" FontWeight="Bold"/>
+                                <TextBlock Text="b²-4ac" FontSize="36" FontFamily="{StaticResource NotoSans}" FontWeight="Bold"/>
                             </c:Root>
                         </c:AlignPanel>
-                </c:Fraction.Numerator>
-                <c:Fraction.Denominator>
-                        <TextBlock Text="2a" Background="Transparent" FontSize="36" FontFamily="{StaticResource NotoSans}"/>
-                </c:Fraction.Denominator>
-            </c:Fraction>
+                    </c:Fraction.Numerator>
+                    <c:Fraction.Denominator>
+                        <TextBlock Text="2a" FontSize="36" FontFamily="{StaticResource NotoSans}"/>
+                    </c:Fraction.Denominator>
+                </c:Fraction>
             </c:AlignPanel>
         </Border>
-    
-        <Border Grid.Row="0" Grid.Column="1" Background="AliceBlue" Padding="4" HorizontalAlignment="Left" VerticalAlignment="Top">
+
+        <Border Grid.Row="0" Grid.Column="1" Padding="4" HorizontalAlignment="Left" VerticalAlignment="Top">
             <c:Root x:Name="RootElement" FontSize="36">
                 <c:Root.Index>
                     <TextBlock Text="n" FontSize="36" FontFamily="{StaticResource NotoSans}"/>
                 </c:Root.Index>
-                <TextBlock Text="b²-4ac" Background="Transparent" FontSize="36" FontFamily="{StaticResource NotoSans}"/>
+                <TextBlock Text="b²-4ac" FontSize="36" FontFamily="{StaticResource NotoSans}"/>
             </c:Root>
         </Border>
 
-        <Border Grid.Row="1" Grid.Column="0" Background="Aqua" HorizontalAlignment="Left" VerticalAlignment="Top" Padding="4">
-            
+        <Border Grid.Row="1" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Top" Padding="4">
+            <keypad:Keypad></keypad:Keypad>
         </Border>
 
-        <Border Grid.Row="1" Grid.Column="1" Background="AliceBlue" Padding="4" HorizontalAlignment="Left" VerticalAlignment="Top">
+        <Border Grid.Row="1" Grid.Column="1" Padding="4" HorizontalAlignment="Left" VerticalAlignment="Top">
 
         </Border>
 
-        <Border Grid.Row="1" Grid.Column="2" Background="AliceBlue" Padding="4" HorizontalAlignment="Left" VerticalAlignment="Top">
+        <Border Grid.Row="1" Grid.Column="2" Padding="4" HorizontalAlignment="Left" VerticalAlignment="Top">
 
         </Border>
     </Grid>
 </Window>
-
-
-
