--- a/Calculator.Keypad/Keypad.xaml
+++ b/Calculator.Keypad/Keypad.xaml
@@ -4,56 +4,59 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Calculator.Keypad"
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d" 
              d:DesignHeight="240" d:DesignWidth="240" FontSize="26" Template="{DynamicResource KeypadTemplate}">
     <Control.Resources>
         <ControlTemplate x:Key="KeypadTemplate" TargetType="local:Keypad">
-            <Grid Background="Transparent">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="80" />
-                    <ColumnDefinition Width="80" />
-                    <ColumnDefinition Width="80" />
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="60" />
-                    <RowDefinition Height="60" />
-                    <RowDefinition Height="60" />
-                    <RowDefinition Height="60" />
-                </Grid.RowDefinitions>
-                <Border Grid.Row="0" Grid.Column="0">
-                    <Button Width="60" Height="40" Content="7" />
-                </Border>
-                <Border Grid.Row="0" Grid.Column="1">
-                    <Button Width="60" Height="40" Content="8" />
-                </Border>
-                <Border Grid.Row="0" Grid.Column="2">
-                    <Button Width="60" Height="40" Content="9" />
-                </Border>
-                <Border Grid.Row="1" Grid.Column="0">
-                    <Button Width="60" Height="40" Content="4" />
-                </Border>
-                <Border Grid.Row="1" Grid.Column="1">
-                    <Button Width="60" Height="40" Content="5" />
-                </Border>
-                <Border Grid.Row="1" Grid.Column="2">
-                    <Button Width="60" Height="40" Content="6" />
-                </Border>
-                <Border Grid.Row="2" Grid.Column="0">
-                    <Button Width="60" Height="40" Content="1" />
-                </Border>
-                <Border Grid.Row="2" Grid.Column="1">
-                    <Button Width="60" Height="40" Content="2" />
-                </Border>
-                <Border Grid.Row="2" Grid.Column="2">
-                    <Button Width="60" Height="40" Content="3" />
-                </Border>
-                <Border Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2">
-                    <Button Width="140" Height="40" Content="0" />
-                </Border>
-                <Border Grid.Row="3" Grid.Column="2">
-                    <Button Width="60" Height="40" Content="." />
-                </Border>
-            </Grid>
+            <materialDesign:DialogHost Identifier="RootDialog">
+                <Grid Background="Transparent">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="80" />
+                        <ColumnDefinition Width="80" />
+                        <ColumnDefinition Width="80" />
+                        <ColumnDefinition Width="80" />
+                        <ColumnDefinition Width="80" />
+                        <ColumnDefinition Width="80" />
+                        <ColumnDefinition Width="80" />
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="60" />
+                        <RowDefinition Height="60" />
+                        <RowDefinition Height="60" />
+                        <RowDefinition Height="60" />
+                    </Grid.RowDefinitions>
+                    <Button Grid.Row="0" Grid.Column="0" Width="60" Height="40" Content="=" Style="{StaticResource MaterialDesignRaisedDarkButton}" />
+                    <Button Grid.Row="0" Grid.Column="1" Width="60" Height="40" Content="trig" Style="{StaticResource MaterialDesignRaisedDarkButton}" Command="{Binding OpenTrigDialogCommand}" />
+                    <Button Grid.Row="0" Grid.Column="2" Width="60" Height="40" Content="7" />
+                    <Button Grid.Row="0" Grid.Column="3" Width="60" Height="40" Content="8" />
+                    <Button Grid.Row="0" Grid.Column="4" Width="60" Height="40" Content="9" />
+                    <Button Grid.Row="0" Grid.Column="5" Width="60" Height="40" Content="x²" Style="{StaticResource MaterialDesignRaisedDarkButton}" />
+                    <Button Grid.Row="0" Grid.Column="6" Width="60" Height="40" Content="√" Style="{StaticResource MaterialDesignRaisedDarkButton}" />
+
+                    <Button Grid.Row="1" Grid.Column="0" Width="60" Height="40" Content="{}{" Style="{StaticResource MaterialDesignRaisedDarkButton}" />
+                    <Button Grid.Row="1" Grid.Column="1" Width="60" Height="40" Content="}" Style="{StaticResource MaterialDesignRaisedDarkButton}" />
+                    <Button Grid.Row="1" Grid.Column="2" Width="60" Height="40" Content="4" />
+                    <Button Grid.Row="1" Grid.Column="3" Width="60" Height="40" Content="5" />
+                    <Button Grid.Row="1" Grid.Column="4" Width="60" Height="40" Content="6" />
+                    <Button Grid.Row="1" Grid.Column="5" Width="60" Height="40" Content="×" Style="{StaticResource MaterialDesignRaisedDarkButton}" />
+                    <Button Grid.Row="1" Grid.Column="6" Width="60" Height="40" Content="÷" Style="{StaticResource MaterialDesignRaisedDarkButton}" />
+
+                    <Button Grid.Row="2" Grid.Column="0" Width="60" Height="40" Content="[" Style="{StaticResource MaterialDesignRaisedDarkButton}" />
+                    <Button Grid.Row="2" Grid.Column="1" Width="60" Height="40" Content="]" Style="{StaticResource MaterialDesignRaisedDarkButton}" />
+                    <Button Grid.Row="2" Grid.Column="2" Width="60" Height="40" Content="1" />
+                    <Button Grid.Row="2" Grid.Column="3" Width="60" Height="40" Content="2" />
+                    <Button Grid.Row="2" Grid.Column="4" Width="60" Height="40" Content="3" />
+                    <Button Grid.Row="2" Grid.Column="5" Width="60" Height="40" Content="+" Style="{StaticResource MaterialDesignRaisedDarkButton}" />
+                    <Button Grid.Row="2" Grid.Column="6" Width="60" Height="40" Content="-" Style="{StaticResource MaterialDesignRaisedDarkButton}" />
+
+                    <Button Grid.Row="3" Grid.Column="0" Width="60" Height="40" Content="(" Style="{StaticResource MaterialDesignRaisedDarkButton}" />
+                    <Button Grid.Row="3" Grid.Column="1" Width="60" Height="40" Content=")" Style="{StaticResource MaterialDesignRaisedDarkButton}" />
+                    <Button Grid.Row="3" Grid.Column="2" Grid.ColumnSpan="2" Width="140" Height="40" Content="0" />
+                    <Button Grid.Row="3" Grid.Column="4" Width="60" Height="40" Content="." />
+                    <Button Grid.Row="3" Grid.Column="5" Grid.ColumnSpan="2" Width="140" Height="40" Content="Enter" Style="{StaticResource MaterialDesignRaisedDarkButton}" />
+                </Grid>
+            </materialDesign:DialogHost>
         </ControlTemplate>
     </Control.Resources>
 </UserControl>
